crates/puffin-cli/tests/snapshots/pip_compile__compile_git_refs_https_dependency.snap
---
source: crates/puffin-cli/tests/pip_compile.rs
info:
  program: puffin
  args:
    - pip-compile
    - requirements.in
    - "--cache-dir"
    - /var/folders/nt/6gf2v7_s3k13zq_t3944rwz40000gn/T/.tmppFSZms
  env:
    VIRTUAL_ENV: /var/folders/nt/6gf2v7_s3k13zq_t3944rwz40000gn/T/.tmpNxY9HX/.venv
---
success: true
exit_code: 0
----- stdout -----
# This file was autogenerated by Puffin v0.0.1 via the following command:
#    [BIN_PATH] pip-compile requirements.in --cache-dir [CACHE_DIR]
blinker==1.7.0
    # via flask
click==8.1.7
    # via flask
flask @ git+https://github.com/pallets/flask.git@7af0271f4703a71beef8e26d1f5f6f8da04100e6
itsdangerous==2.1.2
    # via flask
jinja2==3.1.2
    # via flask
markupsafe==2.1.3
    # via
    #   jinja2
    #   werkzeug
werkzeug==3.0.1
    # via flask

----- stderr -----
Resolved 7 packages in [TIME]

