crates/puffin-cli/tests/snapshots/pip_compile__compile_git_short_commit_https_dependency.snap
---
source: crates/puffin-cli/tests/pip_compile.rs
info:
  program: puffin
  args:
    - pip-compile
    - requirements.in
    - "--cache-dir"
    - /tmp/.tmpzqvoJ0
  env:
    VIRTUAL_ENV: /tmp/.tmpHf1ZWF/.venv
---
success: true
exit_code: 0
----- stdout -----
# This file was autogenerated by Puffin v0.0.1 via the following command:
#    puffin pip-compile requirements.in --cache-dir [CACHE_DIR]
click==8.1.7
    # via flask
flask @ git+https://github.com/pallets/flask.git@d92b64aa275841b0c9aea3903aba72fbc4275d91
itsdangerous==2.1.2
    # via flask
jinja2==3.1.2
    # via flask
markupsafe==2.1.3
    # via
    #   jinja2
    #   werkzeug
werkzeug==3.0.1
    # via flask

----- stderr -----
Resolved 6 packages in [TIME]

