crates/puffin-cli/tests/snapshots/pip_compile__compile_git_ssh_dependency.snap
---
source: crates/puffin-cli/tests/pip_compile.rs
info:
  program: puffin
  args:
    - pip-compile
    - requirements.in
    - "--cache-dir"
    - /var/folders/nt/6gf2v7_s3k13zq_t3944rwz40000gn/T/.tmp6kzvaK
  env:
    VIRTUAL_ENV: /var/folders/nt/6gf2v7_s3k13zq_t3944rwz40000gn/T/.tmpAkObGz/.venv
---
success: true
exit_code: 0
----- stdout -----
# This file was autogenerated by Puffin v0.0.1 via the following command:
#    [BIN_PATH] pip-compile requirements.in --cache-dir [CACHE_DIR]
blinker==1.7.0
    # via flask
click==8.1.7
    # via flask
flask @ git+ssh://git@github.com/pallets/flask.git
itsdangerous==2.1.2
    # via flask
jinja2==3.1.2
    # via flask
markupsafe==2.1.3
    # via
    #   jinja2
    #   werkzeug
werkzeug==3.0.1
    # via flask

----- stderr -----
From ssh://github.com/pallets/flask
 * [new ref]                      -> origin/HEAD
 * [new tag]           0.1        -> 0.1
 * [new tag]           0.10       -> 0.10
 * [new tag]           0.10.1     -> 0.10.1
 * [new tag]           0.11       -> 0.11
 * [new tag]           0.11.1     -> 0.11.1
 * [new tag]           0.12       -> 0.12
 * [new tag]           0.12.1     -> 0.12.1
 * [new tag]           0.12.2     -> 0.12.2
 * [new tag]           0.12.3     -> 0.12.3
 * [new tag]           0.12.4     -> 0.12.4
 * [new tag]           0.12.5     -> 0.12.5
 * [new tag]           0.2        -> 0.2
 * [new tag]           0.3        -> 0.3
 * [new tag]           0.4        -> 0.4
 * [new tag]           0.5        -> 0.5
 * [new tag]           0.6        -> 0.6
 * [new tag]           0.7        -> 0.7
 * [new tag]           0.8        -> 0.8
 * [new tag]           0.8.1      -> 0.8.1
 * [new tag]           0.9        -> 0.9
 * [new tag]           1.0        -> 1.0
 * [new tag]           1.0.1      -> 1.0.1
 * [new tag]           1.0.2      -> 1.0.2
 * [new tag]           1.0.3      -> 1.0.3
 * [new tag]           1.0.4      -> 1.0.4
 * [new tag]           1.1.0      -> 1.1.0
 * [new tag]           1.1.1      -> 1.1.1
 * [new tag]           1.1.2      -> 1.1.2
 * [new tag]           1.1.3      -> 1.1.3
 * [new tag]           1.1.4      -> 1.1.4
 * [new tag]           2.0.0      -> 2.0.0
 * [new tag]           2.0.0rc1   -> 2.0.0rc1
 * [new tag]           2.0.0rc2   -> 2.0.0rc2
 * [new tag]           2.0.1      -> 2.0.1
 * [new tag]           2.0.2      -> 2.0.2
 * [new tag]           2.0.3      -> 2.0.3
 * [new tag]           2.1.0      -> 2.1.0
 * [new tag]           2.1.1      -> 2.1.1
 * [new tag]           2.1.2      -> 2.1.2
 * [new tag]           2.1.3      -> 2.1.3
 * [new tag]           2.2.0      -> 2.2.0
 * [new tag]           2.2.1      -> 2.2.1
 * [new tag]           2.2.2      -> 2.2.2
 * [new tag]           2.2.3      -> 2.2.3
 * [new tag]           2.2.4      -> 2.2.4
 * [new tag]           2.2.5      -> 2.2.5
 * [new tag]           2.3.0      -> 2.3.0
 * [new tag]           2.3.1      -> 2.3.1
 * [new tag]           2.3.2      -> 2.3.2
 * [new tag]           2.3.3      -> 2.3.3
Resolved 7 packages in [TIME]

