crates/puffin-cli/tests/snapshots/pip_compile__compile_git_subdirectory_dependency.snap
---
source: crates/puffin-cli/tests/pip_compile.rs
info:
  program: puffin
  args:
    - pip-compile
    - requirements.in
    - "--cache-dir"
    - /var/folders/nt/6gf2v7_s3k13zq_t3944rwz40000gn/T/.tmpfUuY8I
  env:
    VIRTUAL_ENV: /var/folders/nt/6gf2v7_s3k13zq_t3944rwz40000gn/T/.tmpIJnuRB/.venv
---
success: true
exit_code: 0
----- stdout -----
# This file was autogenerated by Puffin v0.0.1 via the following command:
#    [BIN_PATH] pip-compile requirements.in --cache-dir [CACHE_DIR]
attrs==23.1.0
    # via hypothesis
hypothesis @ git+https://github.com/Zac-HD/hypothesis.git@3812dd1e1d5bc7a4e76399556988b7adaea7751d#subdirectory=hypothesis-python
sortedcontainers==2.4.0
    # via hypothesis

----- stderr -----
Resolved 3 packages in [TIME]

