crates/puffin-cli/tests/snapshots/pip_compile__compile_pyproject_toml_all_extras.snap
---
source: crates/puffin-cli/tests/pip_compile.rs
info:
  program: puffin
  args:
    - pip-compile
    - pyproject.toml
    - "--all-extras"
    - "--cache-dir"
    - /tmp/.tmpQHVFqr
  env:
    VIRTUAL_ENV: /tmp/.tmpmKXqaF/.venv
---
success: true
exit_code: 0
----- stdout -----
# This file was autogenerated by Puffin v0.0.1 via the following command:
#    [BIN_PATH] pip-compile pyproject.toml --all-extras --cache-dir [CACHE_DIR]
anyio==4.0.0
    # via httpcore
asgiref==3.7.2
    # via django
certifi==2023.7.22
    # via httpcore
django==5.0b1
h11==0.14.0
    # via httpcore
httpcore==0.18.0
idna==3.4
    # via anyio
sniffio==1.3.0
    # via
    #   anyio
    #   httpcore
sqlparse==0.4.4
    # via django

----- stderr -----
Resolved 9 packages in [TIME]

