crates/puffin-cli/tests/snapshots/pip_compile__compile_pyproject_toml_extra.snap
---
source: crates/puffin-cli/tests/pip_compile.rs
info:
  program: puffin
  args:
    - pip-compile
    - pyproject.toml
    - "--extra"
    - foo
    - "--cache-dir"
    - /tmp/.tmpDJFnci
  env:
    VIRTUAL_ENV: /tmp/.tmpVDXNX0/.venv
---
success: true
exit_code: 0
----- stdout -----
# This file was autogenerated by Puffin v0.0.1 via the following command:
#    puffin pip-compile pyproject.toml --extra foo --cache-dir [CACHE_DIR]
asgiref==3.7.2
    # via django
django==5.0b1
sqlparse==0.4.4
    # via django

----- stderr -----
Resolved 3 packages in [TIME]

