crates/puffin-cli/tests/snapshots/pip_compile__compile_pyproject_toml_extra_missing.snap
---
source: crates/puffin-cli/tests/pip_compile.rs
info:
  program: puffin
  args:
    - pip-compile
    - pyproject.toml
    - "--extra"
    - bar
    - "--cache-dir"
    - /var/folders/bc/qlsk3t6x7c9fhhbvvcg68k9c0000gp/T/.tmpl8CkFV
  env:
    VIRTUAL_ENV: /var/folders/bc/qlsk3t6x7c9fhhbvvcg68k9c0000gp/T/.tmpUXoj2P/.venv
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: requested extra not found: bar

