crates/puffin-cli/tests/snapshots/pip_compile__compile_pyproject_toml_extra_name_normalization.snap
---
source: crates/puffin-cli/tests/pip_compile.rs
info:
  program: puffin
  args:
    - pip-compile
    - pyproject.toml
    - "--extra"
    - FRiENDlY-...-_-BARd
    - "--cache-dir"
    - /tmp/.tmpVf4Xxi
  env:
    VIRTUAL_ENV: /tmp/.tmpM4Yfd8/.venv
---
success: true
exit_code: 0
----- stdout -----
# This file was autogenerated by Puffin v0.0.1 via the following command:
#    [BIN_PATH] pip-compile pyproject.toml --extra FRiENDlY-...-_-BARd --cache-dir [CACHE_DIR]
asgiref==3.7.2
    # via django
django==5.0b1
sqlparse==0.4.4
    # via django
typing-extensions==4.8.0
    # via asgiref

----- stderr -----
Resolved 4 packages in [TIME]

