crates/puffin-cli/tests/snapshots/pip_compile__compile_pyproject_toml_extras_missing.snap
---
source: crates/puffin-cli/tests/pip_compile.rs
info:
  program: puffin
  args:
    - pip-compile
    - pyproject.toml
    - "--extra"
    - foo
    - "--extra"
    - bar
    - "--extra"
    - foobar
    - "--cache-dir"
    - /var/folders/bc/qlsk3t6x7c9fhhbvvcg68k9c0000gp/T/.tmp6Lgir2
  env:
    VIRTUAL_ENV: /var/folders/bc/qlsk3t6x7c9fhhbvvcg68k9c0000gp/T/.tmpHiL1wt/.venv
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: Requested extras not found: bar, foobar

